2013-08-06  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/TexinfoXML.pm(_xml_attributes):
	do not protect \f and \ in spaces or trailingspaces attributes.

2013-08-06  Patrice Dumas  <pertusus@free.fr>

	* Texinfo/Parser.pm: keep form-feed in @set value.
	* util/texinfo.dtd, util/txixml2texi.pl, 
	tp/Texinfo/Convert/TexinfoXML.pm(_protect_text): output form-feed
	as entity in XML, when possible.  Handle form-feeds in 
	txixml2texi.pl too.
	* tp/Texinfo/Convert/TexinfoXML.pm(_xml_attributes),
	util/texinfo.dtd, util/txixml2texi.pl: protect form-feed in
	attributes by using an entity that becomes a literal \f. 
	Double \ in attributes too.

2013-08-06  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\smartitaliccorrection): also omit italic
	correction if next command is @. or @comma.
	Report from Vincent Lefevre, 5 Aug 2013 02:47:31.

2013-08-06  Patrice Dumas  <pertusus@free.fr>

	* Texinfo/Parser.pm: form-feed in paragraph stops the current
	paragraph.  For that consider \f to be a separator.

2013-08-04  Patrice Dumas  <pertusus@free.fr>

	* Texinfo/Parser.pm: keep form-feed in macro arguments.

2013-07-29  Patrice Dumas  <pertusus@free.fr>

	* Texinfo//Common.pm (enumerate_item_representation),
	* Texinfo/Parser.pm:
	handle correctly @enumerate specification greater than 10.
	Report from Dmitry Shachnev.

2013-06-28  Karl Berry  <karl@gnu.org>

	* contrib/perldoc-all/GNUmakefile (texi_pod_doc_incl): remove X<...>
	pod constructs, so we get good filenames.  For perl-5.18.0.

2013-06-25  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/HTML.pm: use "prev" for rel attribute and not 
	"previous", as prev is the preferred one.  Report by Tom Tromey.

2013-06-21  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\codedash): use \futurelet.
	(\codedashfinish): new definition for - inside @code et al.,
	which does not allow a break after a - when it is preceded or
	followed by another -, or when it is first.